# lista-de-algoritmos

./: CMakeLists.txt  README.md
Lista01/: CMakeLists.txt  IniciadoSistema_ex01.c  ParouImpar.c  README.md  aprovado_ex06.c  dobro_ex02.c  ex09.c  ex10.c  media_ex05.c  ola_ex04.c  quadrado_ex08.c  soma_ex03.c
lista02/: CMakeLists.txt  README.md  altera_ex02.c  comportamento_ex10.c  dentrose_ex05.c  diferenca_ex01.c  diferenca_valor_ex08.c  global_chamada_ex09.c  incremento_ex07.c  reescrita_ex03.c  triplo_ex06.c  troca_ex04.c
lista04/: CMakeLists.txt
recursividade/: CMakeLists.txt  README.md  altera_ex05.c  compara_ex09.c  criacao_ex10.c  dobre_ex06.c  existe_ex04.c  fatorial_ex01.c  potencia_ex03.c  soma_ex02.c  string_ex08.c  vetor_ex07.c
vh/: CMakeLists.txt  README.md  alt_anterior_ex07.c  contagem_ex05.c  crescente_ex08.c  media_e_funcoes_ex02.c  palíndromo_ex09.c  tamanho_ex12.c  valorX_ex06.c  valor_n_ex03.c  vetor_10_ex01.c
