cmake_minimum_required(VERSION 4.1)
project(teste C)

set(CMAKE_C_STANDARD 99)


add_executable(diferenca_ex01 diferenca_ex01.c)
add_executable(altera_ex02 altera_ex02.c)
add_executable(reescrita_ex03 reescrita_ex03.c)
add_executable(troca_ex04 troca_ex04.c)
add_executable(dentrose_ex05 dentrose_ex05.c)
add_executable(triplo_ex06 triplo_ex06.c)
add_executable(incremento_ex07 incremento_ex07.c)
add_executable(diferenca_valor_ex08 diferenca_valor_ex08.c)
add_executable(global_chamada_ex09 global_chamada_ex09.c)
add_executable(comportamento_ex10 comportamento_ex10.c)

