cmake_minimum_required(VERSION 4.1)
project(teste C)

set(CMAKE_C_STANDARD 99)
add_executable(potencia_ex03 potencia_ex03.c)
add_executable(fatorial_ex01 fatorial_ex01.c)
add_executable(soma_ex02 soma_ex02.c)
add_executable(existe_ex04 existe_ex04.c)
add_executable(altera_ex05 altera_ex05.c)
add_executable(dobre_ex06 dobre_ex06.c)
add_executable(vetor_ex07 vetor_ex07.c)
add_executable(string_ex08 string_ex08.c)
add_executable(compara_ex09 compara_ex09.c)
add_executable(criacao_ex10 criacao_ex10.c)