cmake_minimum_required(VERSION 4.1)
project(teste C)

set(CMAKE_C_STANDARD 99)

add_executable(vetor_10_ex01 vetor_10_ex01.c)
add_executable(media_e_funcoes_ex02 media_e_funcoes_ex02.c)
add_executable(valor_n_ex03 valor_n_ex03.c)
add_executable(contagem_ex05 contagem_ex05.c)
add_executable(valorX_ex06 valorX_ex06.c)
add_executable(alt_anterior_ex07 alt_anterior_ex07)
add_executable(crescente_ex08 crescente_ex08.c)
add_executable(palindromo_ex09 palindromo_ex09.c)
add_executable(tamanho_ex12 tamanho_ex12.c)
